--- a/src/main/webapp/WEB-INF/layout/navbar.jspx
+++ b/src/main/webapp/WEB-INF/layout/navbar.jspx
@@ -7,17 +7,13 @@
 -->
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Database Manager</a>
+        <div class="navbar-header" >
+
+            <a class="navbar-brand" style="color:white;" href="/">Database Manager</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/account/create" id="registerLink">Register</a></li>
+                <li><a href="/account/create" style="color:white;"  id="registerLink">Zarejestruj</a></li>
             </ul>
 
         </div>
