#PIK-15 In-Progress Working user creation

--- a/src/main/webapp/WEB-INF/layout/navbar.jspx
+++ b/src/main/webapp/WEB-INF/layout/navbar.jspx
@@ -14,7 +14,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="${spring:mvcUrl('AC#processRegisterNewAccountForm').build()}" style="color:white;"  id="registerLink">Zarejestruj</a></li>
+                <li><a href="${spring:mvcUrl('AC#accountCreate').build()}" style="color:white;"  id="registerLink">Zarejestruj</a></li>
             </ul>
 
         </div>
